--- a/src/utils/AddVideoCard/addvideocard.scss
+++ b/src/utils/AddVideoCard/addvideocard.scss
@@ -41,6 +41,28 @@
       position: absolute;
       top: 5px;
       right: 15px;
+      .cutom_checkbox{
+        margin-bottom: 0px !important;
+        input{
+            display: none;
+            &:checked + span{
+                background-image: url('../../assets/images/svg/tick_custome_checkoutbox_blue.svg');
+                background-color: #FFFFFF;
+            }
+        }
+        span{
+            transition: all 0.4s cubic-bezier(0.23, 1, 0.320, 1);
+            border: 1.5px solid #FFFFFF;
+            border-radius: 2px;
+            background-repeat: no-repeat;
+            background-position: 0px 1px;
+            display: inline-block;
+            height: 12px;
+            width: 12px;
+        }
+      }
+
+
     }
     .addvideo-card-title {
       position: absolute;
@@ -190,6 +212,27 @@
   line-height: 20px;
   color: $curriki-main-blue;
   
+}
+
+.button-tooltip_style{
+  .tooltip-inner{
+    text-align: left;
+    background: #E5EEFF !important;
+    border-radius: 4px;
+    color: $curriki-main-blue;
+    max-width: 250px !important;
+    height: 64px;
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+  }
+ 
+ 
+}
+.bs-tooltip-bottom .arrow::before, .bs-tooltip-auto[x-placement^="bottom"] .arrow::before{
+  border-bottom-color: #E5EEFF !important;
 }
 
 
